[package]
name = "nosql"
version = "0.0.1"
authors = ["Bevan Hunt <bevan@bevanhunt.com>"]
edition = "2018"
license = "MIT"
keywords = ["nosql", "nosql-relational", "database", "triple-data", "facts"]
categories = ["web-programming::http-server", "database-implementations", "authentication"]
description = "NoSQL - NoSQL Relational Database"
repository = "https://github.com/apibillme/nosql"
readme = "README.md"

[dependencies]
